# vjepa-ac

./: .gitignore  README-TW.md  README.md  check_actions.py  evaluate.py  predictor.py  prepare_cache.py  probe.py  pyproject.toml  vjepa_ac.py  vjepa_common.py
docs/superpowers/plans/: 2026-07-02-predictor-evaluation.md
scripts/: ceiling_probe.py  check_actions.py  evaluate.py  export.py  gate_sweep.py  overfit_check.py  plan_demo.py  prepare_cache.py  probe.py  stride_gate.py  train.py  train_compressor.py
src/vjepa_ac/: checkpoints.py  compressor.py  cpredictor.py  data.py  device.py  predictor.py  records.py  schedule.py  variations.py
tests/: test_checkpoints.py  test_compressor.py  test_data.py  test_device.py  test_predictor.py  test_schedule.py  test_variations.py
weights/: model.json
