[project]
name = "vjepa-ac"
version = "0.1.0"
description = "Reproduction of the V-JEPA 2-AC predictor on droid_100 latents"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.4",
    "safetensors>=0.4",
    "tqdm>=4.66",
    "pydantic>=2.7",
    "numpy>=1.26",
]

[project.optional-dependencies]
cache = [
    "transformers>=4.48",
    "huggingface-hub>=0.24",
    "pyarrow>=17",
    "av>=12",
    "pillow>=10",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "pyrefly>=0.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vjepa_ac"]

[tool.ruff]
line-length = 100
src = ["src", "scripts", "tests"]

[tool.ruff.lint.per-file-ignores]
"scripts/prepare_cache.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyrefly]
search-path = ["src", "scripts"]
replace-imports-with-any = ["transformers.*", "av.*", "pyarrow.*", "huggingface_hub.*", "PIL.*"]
